--- a/extension/settings.html
+++ b/extension/settings.html
@@ -35,6 +35,13 @@
     <ul id="shortcut-list"></ul>
 
     <p class="warning">Current shortcuts are non-changeable to avoid conflicts with essential browser functions or default shortcuts.</p>
+    
+    <form>
+      <input type="radio" id="apply-all" name="speed-option" value="all" checked>
+      <label for="apply-all">Apply to all future videos and audio</label><br>
+      <input type="radio" id="apply-tab" name="speed-option" value="tab">
+      <label for="apply-tab">Apply to the current tab only</label><br>
+    </form>
 
     <script src="settings.js"></script>
   </body>
