--- a/extension/settings.html
+++ b/extension/settings.html
@@ -38,7 +38,7 @@
     
     <form>
       <input type="radio" id="apply-all" name="speed-option" value="all" checked>
-      <label for="apply-all">Apply to all future videos and audio</label><br>
+      <label for="apply-all">Apply to all future tabs with video and audio</label><br>
       <input type="radio" id="apply-tab" name="speed-option" value="tab">
       <label for="apply-tab">Apply to the current tab only</label><br>
     </form>
