--- a/extension/settings.html
+++ b/extension/settings.html
@@ -24,7 +24,7 @@
         margin-bottom: 10px;
       }
 
-      .warning {
+      .info {
         color: #dc322f;
         word-wrap: break-word;
       }
@@ -34,7 +34,8 @@
     <h1 id="popupTitle"></h1>
     <ul id="shortcut-list"></ul>
 
-    <p class="warning" id="popupWarning"></p>
+    <p><a href="videoInstructions.mp4" target="_blank" class="info" id="popupInfo"></a>
+    </p>
     
     <form>
       <input type="radio" id="apply-all" name="speed-option" value="all" checked>
